# routee-compass

./: AGENTS.md  LICENSE.md  README.md  config.html  genindex.html  installation.html  intro.html  motivation.html  objects.inv  py-modindex.html  pyproject.toml  python_api_docs.html  query.html  running.html  rust_api_docs.html  search.html  searchindex.js  units.html
.github/workflows/: python-build-test.yaml
_modules/: index.html
_sources/examples/: 01_open_street_maps_example.ipynb  02_different_powertrains_example.ipynb  03_time_energy_tradeoff_example.ipynb  04_charging_stations_example.ipynb  05_ambient_temperature_example.ipynb
dev/bench/: data.js
developers/: build_the_docs.html  contributing.html  rust_code_style.html
developers/log/: 2025-08-29-edgelist-refactor-thread.html  2025-09-18-label-u8-mem-alignment.html
docs/: _config.yml  compass-config-schema.json
docs/examples/: 01_open_street_maps_example.py  02_different_powertrains_example.py  03_time_energy_tradeoff_example.py  04_charging_stations_example.py  05_ambient_temperature_example.py  (+1 more)
examples/: 01_open_street_maps_example.html  02_different_powertrains_example.html  04_charging_stations_example.html  05_ambient_temperature_example.html
rust/: Cargo.toml
rust/routee-compass-codegen/: Cargo.toml  README.md
rust/routee-compass-codegen/src/: main.rs
rust/routee-compass-codegen/src/generator/: constraint.rs  input_plugin.rs  mod.rs  output_plugin.rs  traversal.rs  util.rs
scripts/: generate-compass-schema.sh  intellisense-settings.json  test-compass-schema.sh
(+241 files in other folders)
